gccida/c2/ssa_eliminate_dead_code
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:994:4: error: expected ';' after expression
rtx v41; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:994:5: error: use of undeclared identifier 'v41'
rtx v41; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1022:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1022:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1032:4: error: expected ';' after expression
rtx v79; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1032:5: error: use of undeclared identifier 'v79'
rtx v79; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1035:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1035:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1036:4: error: expected ';' after expression
rtx v83; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1036:5: error: use of undeclared identifier 'v83'
rtx v83; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1040:4: error: expected ';' after expression
rtx insn_after_basic_block_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1040:5: error: use of undeclared identifier 'insn_after_basic_block_note'; did you mean 'first_insn_after_basic_block_note'?
rtx insn_after_basic_block_note; // rax 
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
    first_insn_after_basic_block_note
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/basic-block.h:325:12: note: 'first_insn_after_basic_block_note' declared here
extern rtx first_insn_after_basic_block_note    PARAMS ((basic_block));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1041:4: error: expected ';' after expression
rtx v88; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1041:5: error: use of undeclared identifier 'v88'
rtx v88; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1044:4: error: expected ';' after expression
rtx v91; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1044:5: error: use of undeclared identifier 'v91'
rtx v91; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1051:4: error: expected ';' after expression
rtx mm; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1051:5: error: use of undeclared identifier 'mm'
rtx mm; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/ssa-dce.c:1057:4: error: expected ';' after expression
rtx x; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ssa_eliminate_dead_code/src/obj/ssa-dce.o] Error 1
